; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/chibios/extr_suspend.c_suspend_wakeup_condition.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/chibios/extr_suspend.c_suspend_wakeup_condition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATRIX_ROWS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @suspend_wakeup_condition() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = call i32 (...) @matrix_power_up()
  %4 = call i32 (...) @matrix_scan()
  %5 = call i32 (...) @matrix_power_down()
  store i64 0, i64* %2, align 8
  br label %6

6:                                                ; preds = %16, %0
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @MATRIX_ROWS, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %10, label %19

10:                                               ; preds = %6
  %11 = load i64, i64* %2, align 8
  %12 = call i64 @matrix_get_row(i64 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 1, i32* %1, align 4
  br label %20

15:                                               ; preds = %10
  br label %16

16:                                               ; preds = %15
  %17 = load i64, i64* %2, align 8
  %18 = add nsw i64 %17, 1
  store i64 %18, i64* %2, align 8
  br label %6

19:                                               ; preds = %6
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %14
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @matrix_power_up(...) #1

declare dso_local i32 @matrix_scan(...) #1

declare dso_local i32 @matrix_power_down(...) #1

declare dso_local i64 @matrix_get_row(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
